--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "firebase": "^12.9.0",
+    "katex": "^0.16.33",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-katex": "^3.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
